deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: holy-namespace 

  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-container
        image: nginxdemos/hello
        ports:
        - containerPort: 80
