service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: holy-namespace 
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
