ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: holy-namespace 
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mycluster.my
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
